--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "morgan": "^1.9.0",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
     "sequelize": "^4.28.6"
   },
   "devDependencies": {
